discount tests are NOT  ready adding policy and policy tests